SASS template added

--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -1,6 +1,12 @@
 $font-stack:    Helvetica, sans-serif
 $primary-color: #333
 
-h2
-  font: 100% $font-stack
-  color: $primary-color
+
+.p-toolbar
+  background: #1e1e1e
+  border: 1px solid #383838
+  padding: 1rem
+  border-radius: 3px
+
+  .p-toolbar-separator
+    margin: 0 0.5rem
