--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,2 +1,20 @@
-<h2>{{getTitle()}}</h2>
-<p>{{getTitleSubText()}}</p>
+<p-toolbar>
+  <div class="p-toolbar-group-left">
+      <p-button label="New" icon="pi pi-plus"></p-button>
+      <p-button label="Upload" icon="pi pi-upload" styleClass="p-button-success"></p-button>
+
+      <i class="pi pi-bars"></i>
+
+      </div>
+
+        <div>
+        <h2>{{getTitle()}}</h2>
+        <p>{{getTitleSubText()}}</p>
+      </div>
+
+  <div class="p-toolbar-group-right">
+      <p-button icon="pi pi-search"></p-button>
+      <p-button icon="pi pi-calendar" styleClass="p-button-success"></p-button>
+      <p-button icon="pi pi-times" styleClass="p-button-danger"></p-button>
+  </div>
+</p-toolbar>
