--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<p-toolbar>
+<!-- <p-toolbar>
   <div class="p-toolbar-group-left">
       <p-button label="New" icon="pi pi-plus"></p-button>
       <p-button label="Upload" icon="pi pi-upload" styleClass="p-button-success"></p-button>
@@ -7,7 +7,7 @@
 
       </div>
 
-        <div>
+      <div>
         <h2>{{getTitle()}}</h2>
         <p>{{getTitleSubText()}}</p>
       </div>
@@ -17,4 +17,7 @@
       <p-button icon="pi pi-calendar" styleClass="p-button-success"></p-button>
       <p-button icon="pi pi-times" styleClass="p-button-danger"></p-button>
   </div>
-</p-toolbar>
+</p-toolbar> -->
+<mat-toolbar>
+  <span>My Application</span>
+</mat-toolbar>
