--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -1,12 +1,15 @@
 $font-stack:    Helvetica, sans-serif
-$primary-color: #333
+$background-color: #171819
+$text-color: #FFFFFF
+$border-color: #FFFFFF
 
 
 .p-toolbar
-  background: #1e1e1e
-  border: 1px solid #383838
+  background: $background-color
   padding: 1rem
   border-radius: 3px
+  border-color: $border-color
+  color: $text-color
 
   .p-toolbar-separator
     margin: 0 0.5rem
