Toolbar title applied

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,5 +19,11 @@
   </div>
 </p-toolbar> -->
 <mat-toolbar>
-  <span>My Application</span>
+  <div>
+    <h2>Welcome to {{getTitleSubText()}}</h2>
+    <sub class="text-color-secondary">hosted on  {{getTitle()}} <mat-icon class="example-icon" aria-hidden="false" aria-label="Example user verified icon">verified_user</mat-icon></sub>
+  </div>
 </mat-toolbar>
+
+
+
