--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,15 +1,12 @@
 @import '~@angular/material/theming'
 @include mat-core()
 
-
-$candy-app-primary: mat-palette($mat-indigo)
-$candy-app-accent:  mat-palette($mat-pink, A200, A100, A400)
-$candy-app-warn:    mat-palette($mat-red)
-$candy-app-theme: mat-light-theme(( color: ( primary: $candy-app-primary, accent: $candy-app-accent, warn: $candy-app-warn, )))
-
 $dark-primary: mat-palette($mat-blue-grey)
 $dark-accent:  mat-palette($mat-amber, A200, A100, A400)
 $dark-warn:    mat-palette($mat-deep-orange)
 $dark-theme:   mat-dark-theme(( color: ( primary: $dark-primary, accent: $dark-accent, warn: $dark-warn, )))
 
-@include angular-material-color($dark-theme) // @include angular-material-theme($candy-app-theme)
+@include angular-material-color($dark-theme)
+
+.text-color-secondary
+  color: #ffe3d7
