--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,8 +20,9 @@
 </p-toolbar> -->
 <mat-toolbar>
   <div>
-    <h2>Welcome to {{getTitleSubText()}}</h2>
-    <sub class="text-color-secondary">hosted on  {{getTitle()}} <mat-icon class="example-icon" aria-hidden="false" aria-label="Example user verified icon">verified_user</mat-icon></sub>
+    <sub>Welcome to</sub>
+    <h2>{{getTitleSubText()}}🍔</h2>
+    <sub class="text-color-secondary">hosted on {{getTitle()}}</sub>
   </div>
 </mat-toolbar>
 
