--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -1,4 +1,14 @@
-$font-stack:    Helvetica, sans-serif
-$background-color: #171819
-$text-color: #FFFFFF
-$border-color: #FFFFFF
+$background-color-primary: #1e1e1e
+$text-color-secondary: #ffe3d7
+
+mat-toolbar
+  div
+    line-height: 0%
+    font-size: 8px
+    text-align: center
+    right: 0px
+    padding: 10px
+    sub
+      font-size: 8px
+      padding: 20%
+      color: $text-color-secondary
