--- a/src/styles.sass
+++ b/src/styles.sass
@@ -8,5 +8,8 @@ $dark-theme:   mat-dark-theme(( color: ( primary: $dark-primary, accent: $dark-a
 
 @include angular-material-color($dark-theme)
 
-.text-color-secondary
-  color: #ffe3d7
+$background-color-primary: #1e1e1e
+$text-color-secondary: #ffe3d7
+
+html
+  background-color: $background-color-primary
