--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -4,11 +4,10 @@ $text-color-secondary: #ffe3d7
 mat-toolbar
   div
     line-height: 0%
-    font-size: 8px
     text-align: center
-    right: 0px
+    margin: auto
+    width: 50%
     padding: 10px
     sub
       font-size: 8px
-      padding: 20%
       color: $text-color-secondary
