--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-<html>
-  <header>
+<header>
     <app-header></app-header>
-  </header>
-</html>
+</header>
+
+<body>
+
+</body>
+
+<footer>
+  <app-footer></app-footer>
+</footer>
