--- a/src/styles.sass
+++ b/src/styles.sass
@@ -9,7 +9,11 @@ $dark-theme:   mat-dark-theme(( color: ( primary: $dark-primary, accent: $dark-a
 @include angular-material-color($dark-theme)
 
 $background-color-primary: #1e1e1e
+$text-color-primary: #FFFFFF
 $text-color-secondary: #ffe3d7
 
 html
   background-color: $background-color-primary
+  background:
+    image: url(https://image.freepik.com/free-vector/collection-handrawn-elements-fast-food_125540-314.jpg)
+    position: centre
