--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,18 +1,19 @@
-<mat-grid-list cols="2" rowHeight="2:1">
-  <mat-grid-tile>
+<mat-grid-list cols="5" rowHeight="5:4">
+  <h1>Burger Time?</h1>
+  <mat-grid-tile><!-- EMPTY COLUMN --></mat-grid-tile>
+
+  <mat-grid-tile colspan=3 rowspan=2 class="borgor-video-container">
     <div class="borgor-video">
-      <header>
-        <h1>Burger Time?</h1>
         <iframe src="https://www.youtube-nocookie.com/embed/j8H4pm9Q-Rw?autoplay=1&t=4&loop=1&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&iv_load_policy=3&fs=0"
-          width="620"
-          height="360"
-          frameborder="0"
-          allowfullscreen>
-        </iframe>
-      </header>
-      <footer>
-        <a href="https://www.youtube.com/watch?v=qlCGh33eIFQ">Consume</a>
-      </footer>
+        frameborder="0"
+        allowfullscreen>
+      </iframe><br/>
     </div>
   </mat-grid-tile>
+
+  <mat-grid-tile><!-- EMPTY COLUMN --></mat-grid-tile>
+  <mat-grid-tile><!-- EMPTY COLUMN --></mat-grid-tile>
+  <mat-grid-tile><!-- EMPTY COLUMN --></mat-grid-tile>
 </mat-grid-list>
+
+  <a href="https://www.youtube.com/watch?v=qlCGh33eIFQ">Consume</a>
