--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
                         (closed)="panelOpenState = false">
     <mat-expansion-panel-header>
       <mat-panel-title>
-        Acknowledgements, Attribution and more info
+        Acknowledgements, Attribution and more
       </mat-panel-title>
       <mat-panel-description>
          (っ▀¯▀)つ Thank you all ヽ(´ー｀)ノ
