--- a/src/styles.sass
+++ b/src/styles.sass
@@ -20,11 +20,12 @@ html
     position: centre
 
 body
-  height: auto
+  height: fit-content
+  background-color: $background-color-primary-transparent
 
 footer
   background-color: $background-color-primary
   clear: both
-  position: fixed
+  position: relative
   height: 200px
   //margin-top: -200px
