--- a/src/app/body/body.component.sass
+++ b/src/app/body/body.component.sass
@@ -1,3 +1,16 @@
 @import ../../styles
-mat-grid-list
-  background-color: $background-color-primary-transparent
+.borgor-video-container
+  align-content: center
+.borgor-video
+  position: relative
+  overflow: hidden
+  width: 100%
+  padding-top: 56.25%
+  iframe
+    position: absolute
+    top: 0
+    left: 0
+    bottom: 0
+    right: 0
+    width: 100%
+    height: 100%
