CU-34rw2w[Completed]

--- a/src/app/body/body.component.sass
+++ b/src/app/body/body.component.sass
@@ -1,6 +1,18 @@
 @import ../../styles
+
 .borgor-video-container
-  align-content: center
+  text-align: center
+  a
+    line-height: 150%
+    color: $text-color-secondary
+    font-size: 10px
+    text-decoration: none
+  mat-grid-list
+    h1
+      padding-bottom: 40%
+
+.mat-grid-list
+  text-align: center
 .borgor-video
   position: relative
   overflow: hidden
