More compact heading, video and button spacing.

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,6 +1,6 @@
 <div class="borgor-video-container">
+  <h1>Burger Time?</h1>
   <mat-grid-list cols="5" rowHeight="fit">
-    <h1>Burger Time?</h1>
     <mat-grid-tile><!-- EMPTY COLUMN --></mat-grid-tile>
     <mat-grid-tile colspan=3 rowspan=2>
       <div class="borgor-video">
@@ -14,7 +14,7 @@
     <mat-grid-tile><!-- EMPTY COLUMN --></mat-grid-tile>
     <mat-grid-tile><!-- EMPTY COLUMN --></mat-grid-tile>
   </mat-grid-list>
-  <button mat-fab color="primary" aria-label="Consume the burger">
+  <button id="btn-consume" mat-fab color="primary" aria-label="Consume the burger">
     <a href="https://www.youtube.com/watch?v=qlCGh33eIFQ">Consume<br/>🍔</a>
   </button>
 </div>
