--- a/src/app/body/body.component.sass
+++ b/src/app/body/body.component.sass
@@ -7,9 +7,10 @@
     color: $text-color-secondary
     font-size: 10px
     text-decoration: none
+  h1
+    color: $text-color-secondary
   mat-grid-list
-    h1
-      padding-bottom: 40%
+    padding-bottom: 35%
 
 .mat-grid-list
   text-align: center
@@ -26,3 +27,7 @@
     right: 0
     width: 100%
     height: 100%
+
+#btn-consume
+  height: 100px
+  width: 100px
