Optimized random video and added event listener

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -15,6 +15,6 @@
     <mat-grid-tile><!-- EMPTY COLUMN --></mat-grid-tile>
   </mat-grid-list>
   <button id="btn-consume" mat-fab color="primary" aria-label="Consume the burger">
-    <a href="https://www.youtube.com/watch?v=qlCGh33eIFQ">Consume<br/>🍔</a>
+    Consume <br/>Another<br/>🍔
   </button>
 </div>
