Cleaned up wip fixing ratios

--- a/src/app/body/body.component.sass
+++ b/src/app/body/body.component.sass
@@ -2,33 +2,14 @@
 
 .borgor-video-container
   text-align: center
-  a
-    line-height: 150%
-    color: $text-color-secondary
-    font-size: 10px
-    text-decoration: none
   h1
+    font-size: 1.5vmax
     color: $text-color-secondary
-  mat-grid-list
-    padding-bottom: 35%
 
-.mat-grid-list
-  text-align: center
-.borgor-video
-  position: relative
-  overflow: hidden
-  width: 100%
-  padding-top: 56.25%
-  iframe
-    position: absolute
-    top: 0
-    left: 0
-    bottom: 0
-    right: 0
-    width: 100%
-    height: 100%
-
+#borgor-video
+  height: auto
+  width: auto
 #btn-consume
-  height: 128px
-  width: 128px
-  font-size: 25px
+  height: max-content
+  width: same-as-height
+  font-size: 1em
