--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,20 +1,10 @@
 <div class="borgor-video-container">
   <h1>Burger Time?</h1>
-  <mat-grid-list cols="5" rowHeight="fit">
-    <mat-grid-tile><!-- EMPTY COLUMN --></mat-grid-tile>
-    <mat-grid-tile colspan=3 rowspan=2>
-      <div class="borgor-video">
-          <iframe id="borgor-video" src=""
-          frameborder="0"
-          allowfullscreen>
-        </iframe><br/>
-      </div>
-    </mat-grid-tile>
-    <mat-grid-tile><!-- EMPTY COLUMN --></mat-grid-tile>
-    <mat-grid-tile><!-- EMPTY COLUMN --></mat-grid-tile>
-    <mat-grid-tile><!-- EMPTY COLUMN --></mat-grid-tile>
-  </mat-grid-list>
-  <button id="btn-consume" mat-fab color="primary" aria-label="Consume the burger">
+
+  <iframe id="borgor-video" frameborder="0" allowfullscreen></iframe><br/>
+
+  <button id="btn-consume" mat-fab color="primary">
     Consume <br/>Another<br/>🍔
   </button>
+
 </div>
