Redundant style code removed

--- a/src/app/body/body.component.sass
+++ b/src/app/body/body.component.sass
@@ -3,13 +3,12 @@
 .borgor-video-container
   text-align: center
   h1
-    font-size: 1.5vmax
     color: $text-color-secondary
 
 #borgor-video
-  height: auto
-  width: auto
+  width: 50vw
+  height: 50vh
 #btn-consume
-  height: max-content
-  width: same-as-height
-  font-size: 1em
+  height: 85px
+  width: 85px
+  font-size: 16px
