Footer text more mobile friendly

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -20,6 +20,7 @@ html
     position: centre
 
 body
+  min-height: 75vh
   height: fit-content
   background-color: $background-color-primary-transparent
 
@@ -27,4 +28,5 @@ footer
   background-color: $background-color-primary
   clear: both
   position: relative
-  height: 200px
+  min-height: 10vh
+  height: fit-content
