--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -4,6 +4,7 @@ mat-toolbar
     margin: auto
     text-align: center
     line-height: 0%
+    padding-left: 3vh
     sub
       font-size: 8px
       color: $text-color-secondary
