--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,7 +1,9 @@
 <div class="borgor-video-container">
   <h1>Burger Time?</h1>
 
-  <iframe id="borgor-video" frameborder="0" allowfullscreen></iframe><br/><br/><br/>
+  <iframe id="borgor-video" frameborder="0" allowfullscreen></iframe><br/>
+  <div id="video-count"></div>
+  <br/><br/>
   <button id="btn-consume" mat-fab color="primary">
     Consume <br/>Another<br/>🍔
   </button>
