--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -8,3 +8,9 @@ mat-toolbar
     sub
       font-size: 8px
       color: $text-color-secondary
+
+mat-drawer-container
+  float: left
+  height: $main-height
+  mat-drawer
+    width: 20vw
