--- a/src/styles.sass
+++ b/src/styles.sass
@@ -13,6 +13,8 @@ $background-color-primary-transparent: #0000006e
 $text-color-primary: #FFFFFF
 $text-color-secondary: #ffe3d7
 
+$main-height: 75vh
+
 html
   //background-color: $background-color-primary-transparent
   background:
@@ -20,7 +22,7 @@ html
     position: centre
 
 body
-  min-height: 75vh
+  min-height: $main-height
   height: fit-content
   background-color: $background-color-primary-transparent
 
