--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,6 +1,5 @@
 <div class="borgor-video-container">
-  <h1>Burger Time?</h1>
-
+  <h1>Burger Time?</h1><br/>
   <iframe id="borgor-video" frameborder="0" allowfullscreen></iframe><br/>
   <div id="video-count"></div>
   <br/><br/>
