--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,7 +10,8 @@
       </mat-panel-description>
     </mat-expansion-panel-header>
     This website is open sourced check <a href="https://github.com/taghead/taghead.xyz">GitHub</a><br/>
-    Background image Attribution: <a href="https://www.freepik.com/vectors/background">Background vector created by Vectorium - www.freepik.com</a><br/>
-    Background image Source: <a href="https://www.freepik.com/free-vector/collection-handrawn-elements-fast-food_10264678.htm#page=1&query=burger%20background&position=2">Click Here</a><br/>
+    <a href="https://www.freepik.com/vectors/background"> Background created by Vectorium - www.freepik.com</a>
+    <a href="https://www.freepik.com/free-vector/collection-handrawn-elements-fast-food_10264678.htm#page=1&query=burger%20background&position=2"><mat-icon>image</mat-icon></a>
+
   </mat-expansion-panel>
 </mat-accordion>
