Some menu items added

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,6 +12,8 @@
 
 <mat-drawer-container>
   <mat-drawer #drawer mode="side">
-    <p>Work in progress</p>
+    <h1>Secret Menu</h1>
+    <button mat-stroked-button><mat-icon>home</mat-icon> Homepage </button><br/>
+    <button mat-stroked-button><mat-icon>feedback</mat-icon> Feedback</button><br/>
   </mat-drawer>
 </mat-drawer-container>
