--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <mat-accordion>
-  <mat-expansion-panel  (opened)="panelOpenState = true"
+  <mat-expansion-panel  (opened)="panelOpenState = true;"
                         (closed)="panelOpenState = false">
     <mat-expansion-panel-header>
       <mat-panel-title>
