--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -13,4 +13,8 @@ mat-drawer-container
   float: left
   height: $main-height
   mat-drawer
-    width: 20vw
+    // width: 10vw
+    min-width: 200px
+    text-align: center
+    button
+      width: 150px
