--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,41 @@
 <mat-drawer-container>
   <mat-drawer #drawer mode="side">
     <h1>Secret Menu</h1>
-    <button mat-stroked-button><mat-icon>home</mat-icon> Homepage </button><br/>
-    <button mat-stroked-button><mat-icon>feedback</mat-icon> Feedback</button><br/>
+    <button mat-stroked-button>
+      <table>
+        <tr>
+          <td>
+            <mat-icon>home</mat-icon>
+          </td>
+          <td>
+            Homepage
+          </td>
+        </tr>
+      </table>
+    </button><br/>
+    <button mat-stroked-button>
+      <table>
+        <tr>
+          <td>
+            <mat-icon>add_to_photos</mat-icon>
+          </td>
+          <td>
+            Submit video
+          </td>
+        </tr>
+      </table>
+    </button><br/>
+    <button mat-stroked-button>
+      <table>
+        <tr>
+          <td>
+            <mat-icon>Feedback</mat-icon>
+          </td>
+          <td>
+            feedback
+          </td>
+        </tr>
+      </table>
+    </button><br/>
   </mat-drawer>
 </mat-drawer-container>
