--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -17,4 +17,6 @@ mat-drawer-container
     min-width: 200px
     text-align: center
     button
-      width: 150px
+      width: 160px
+      table tr td
+        color: $text-color-primary
