Improved video aspect ration

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,4 +1,4 @@
-<div class="borgor-video-container">
+<main class="main">
   <br/><h1>Burger Time?</h1><br/><br/>
   <iframe id="borgor-video" frameborder="0" allowfullscreen></iframe><br/>
   <div id="video-count"></div>
@@ -6,5 +6,4 @@
   <button id="btn-consume" mat-fab color="primary">
     Consume <br/>Another<br/>🍔
   </button>
-
-</div>
+</main>
