--- a/src/app/body/body.component.sass
+++ b/src/app/body/body.component.sass
@@ -1,6 +1,6 @@
 @import ../../styles
 
-.borgor-video-container
+.main
   text-align: center
   h1
     color: $text-color-secondary
@@ -10,7 +10,10 @@
 
 #borgor-video
   width: 45vw
-  height: 45vh
+  min-width: 430px
+  height: 45vw*0.50
+  min-height: 215px
+
 #btn-consume
   height: 85px
   width: 85px
