Navbar now overlays rather than pushing content

--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -10,13 +10,13 @@ mat-toolbar
       color: $text-color-secondary
 
 mat-drawer-container
-  float: left
   height: $main-height
+  background-color: #00000000 !important
   mat-drawer
-    // width: 10vw
     min-width: 200px
     text-align: center
     button
       width: 160px
       table tr td
         color: $text-color-primary
+    mat-drawer-content
