Menu button clicks are more accurate

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <mat-toolbar>
-    <button mat-icon-button color="accent" aria-label="Example icon button with a menu icon">
-      <mat-icon (click)="drawer.toggle()">menu</mat-icon>
+    <button (click)="drawer.toggle()" mat-icon-button color="accent" aria-label="Example icon button with a menu icon">
+      <mat-icon>menu</mat-icon>
     </button>
     <div>
       <sub>Welcome to</sub>
