Cu 34rw36 develop the backend andrew (#20)
* Simple express.js example

* Added additional documentation for supabase.io.

* Forgot to save latest version of readme. Recommiting

* Added environment variables to .gitignore

* I screwed up, fixing now

* Correcting gitignore

* .gitignore fix

* Adding default config

* Adding to git ignore

* Updated readme and commenting

* Cleaned up documentation

* Added preview images to readme

* Sensitive \ / fix

* Website up badge

* Added checklist

* Updated instructions to ensure safe environments

* Added required services and forms for authentication

* Cleaning up login ui

* Added technical documentation for preparing environment

* Added Angular installation documentation

* Added Angular global style themeing documentation

* Added placeholders for component and services documentation

* Added placeholders for git workflow

* Added Supabase install and production credentials instructions

* Added local testing documentation for Supabase

* Simplified documentation

* Added port information

* Login is now responsive

* Adjusted html to have default login value

Co-authored-by: Andrew <taghead@taghead.xyz>

--- a/src/app/login-dialog/login-dialog.component.html
+++ b/src/app/login-dialog/login-dialog.component.html
@@ -1,24 +1,44 @@
-<form>
-  <div class="button-close-dialog">
-    <button mat-icon-button mat-dialog-close aria-label="Example icon button with a vertical three dot icon">
-      <mat-icon>close</mat-icon>
-    </button>
-  </div>
-  <br/><br/>
+<div>
+  <form [formGroup]="authForm">
 
-  <mat-form-field appearance="fill">
-    <mat-label>Enter your email</mat-label>
-    <input matInput placeholder="pat@example.com" [formControl]="email" required>
-    <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
-  </mat-form-field>
-  <br/>
-  <mat-form-field appearance="fill">
-    <mat-label>Enter your password</mat-label>
-    <input matInput [type]="hide ? 'password' : 'text'">
-    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-    </button>
-  </mat-form-field><br/>
-  <button id="btn-sign-in" mat-raised-button>Sign Up</button>
-  <button id="btn-sign-up" mat-raised-button>Sign In</button>
-</form>
+    <mat-form-field appearance="fill">
+      <mat-label for="email">
+        <span>*</span>
+        Email:
+      </mat-label>
+      <input matInput id="email" type="email" name="email" formControlName="email" required />
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label for="password">
+        <span>*</span>
+        Password:
+      </mat-label>
+      <input matInput id="password" type="password" name="password" formControlName="password" required />
+    </mat-form-field>
+
+    <div *ngIf="helperText?.text && helperText?.error">
+      {{ helperText?.text }}
+    </div>
+    <div *ngIf="helperText?.text && !helperText?.error">
+      {{ helperText?.text }}
+    </div>
+    <div>
+      <span>
+        <button mat-raised-button type="button" (click)="handleLogin('REGISTER')">
+          Sign Up
+        </button>
+      </span>
+      <span>
+        <button mat-raised-button (click)="forgotPassword()" type="button">
+          Forgot Password
+        </button>
+      </span>
+      <span>
+        <button mat-raised-button (click)="handleLogin('LOGIN')" type="button">
+          Sign In
+        </button>
+      </span>
+    </div>
+  </form>
+</div>
