--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
       <h2>{{getTitleSubText()}}🍔</h2>
       <sub class="text-color-secondary">hosted on {{getTitle()}}</sub>
     </div>
-    <button mat-raised-button (click)="openLoginDialog()" >Login</button>
+    <button id="userAuthBtn" mat-raised-button (click)="userAuthBtnOnClick()" >Login</button>
   </mat-toolbar>
 </header>
 
